# Operating_Systems

Lab_1/: AutoReset.cmd  AutoReset.sh  CMakeLists.txt
Lab_1/src/: main.cpp
Lab_2/: CMakeLists.txt  exploration.cpp
Lab_2/src/: process_child.cpp  process_manager.cpp  test.cpp
Lab_3/: CMakeLists.txt
Lab_3/src/: child1.cpp  child2.cpp  exploration_main.cpp  main.cpp
Lab_4/: CMakeLists.txt
Lab_4/src/: exploration.cpp  main.cpp  serial_port.h  temperature_simulator.cpp
Lab_5/: CMakeLists.txt  index.html  script.js  style.css
Lab_5/src/: main.cpp  serial_port.h  temperature_simulator.cpp
Lab_6/temperature_monitor/: Makefile  chart.cpp  chart.h  mainwindow.cpp  mainwindow.h  moc_chart.cpp  moc_mainwindow.cpp  prompt.txt  script.js  temperature_monitor  temperature_monitor.pro
Lab_7/: README.md
